--- a/css/main.css
+++ b/css/main.css
@@ -61,16 +61,17 @@ body {
 
 body, input, select, textarea {
     font-family: 'Shrikhand', cursive;
-    font-size: 15pt;
+    font-size: 20px;
     font-weight: 300;
-    line-height: 2;
+    line-height: 32px;
 }
 
 
 @media screen and (max-width: 980px) {
 
     body, input, select, textarea {
-        font-size: 12pt;
+        font-size: 16px;
+        line-height:26px;
     }
 
 }
