--- a/css/main.css
+++ b/css/main.css
@@ -92,7 +92,7 @@ a:hover {
 
 h1, h2, h3, h4, h5, h6 {
     font-weight: 700;
-    line-height: 1.5;
+    line-height: 36px;
     margin: 0 0 1em 0;
     text-transform: uppercase;
 }
