--- a/css/main.css
+++ b/css/main.css
@@ -342,7 +342,7 @@ body {
     color: #f7a5a7;
     padding: 13em 0 11em 0;
     background-color: #050505;
-    background-image: url("img/banner.jpg");
+    background-image: url("../img/banner.jpg");
     background-size: cover;
     background-repeat: no-repeat;
     background-position: 15% left;
